# Cardiac-Prolate-Spheroidal-ToolKit

./: CMakeLists.txt  CPSTKConfig.cmake  CPSTKConfig.cmake.in  CTestConfig.cmake  README.md  UseCPSTK.cmake.in  cpstk.cxx  cpstkConfigure.h.in  index.html  itkApplyMaskToImageCommand.cxx.from-pierre  itkExtractProlateInformationCommandFactory.h  itkRotateProlateSpheroidCommandFactory.cxx  itkTensorsToVTKCommand.cxx  itkTensorsToVTKCommand.h  itkTensorsToVTKCommandFactory.cxx  params.json  ptk.cxx  ptkConfigure.h.in
Algorithms/: CMakeLists.txt  GetPot.h  itkCylindricalTransform.h  itkCylindricalTransform.txx  itkCylindricalTransformTensorMeshFilter.h  itkCylindricalTransformTensorMeshFilter.txx  itkEigenVectorToTensorImageFilter.h  itkEigenVectorToTensorImageFilter.txx  (+43 more)
CMake/Superbuild/: CMakeLists.txt
Commands/: CMakeLists.txt  CreatePTKFactory.cmake  itkApplyTransformToImageCommand.cxx  itkApplyTransformToMeshCommand.cxx  itkApplyTransformToTensorImageCommand.cxx  itkBackwardTransformImageCommand.cxx  itkBackwardTransformMeshCommand.cxx  itkColorFibresWithProlateAngleCommand.cxx  itkCreateProlateAtlasCommand.cxx  itkCreateProlateCoordinateImageCommand.cxx  itkCreateProlateDomainCommand.cxx  itkCreateSyntheticCardiacTensorMapCommand.cxx  itkCropImageCommand.cxx  itkCumulateProlateSpheroidalDataSets.cxx  itkCumulateProlateSpheroidalDataSetsCommand.cxx  itkExtractKernelsEnveloppeCommand.cxx  itkExtractProlateInformationCommand.cxx  itkExtractProlateInformationCommand.h  itkExtractProlateInformationCommandFactory.cxx  itkExtrapolateTensorFieldCommand.cxx  itkFindClosestProlateTransformCommand.cxx  itkForwardTransformImageCommand.cxx  itkForwardTransformMesh2Command.cxx  itkForwardTransformMeshCommand.cxx  itkLimitImageToAHAZoneCommand.cxx  itkLimitTensorImageToAHAZoneCommand.cxx  itkLimitTensorsToAHAZoneCommand.cxx  itkOptimizeExtrapolationKernelsCommand.cxx  itkPaintTensorImageWithAngleCommand.cxx  itkProlateSpheroidalStatisticsCommand.cxx  itkPtkCommandTemplate.h.in  itkReorderDWIsCommand.cxx  itkResampleImage3Command.cxx  itkResampleTensorImage3Command.cxx  itkRotateProlateSpheroidCommand.cxx  itkRotateProlateSpheroidCommand.h  itkRotateProlateSpheroidCommandFactory.h  itkTensorImageToMeshCommand.cxx  itkTensorMeshCovarianceCommand-old.cxx  itkTensorMeshCovarianceCommand.cxx  (+9 more)
Commands/cmake/: CreateCPSTKCommand.cmake  CreatePTKCommand.cmake  itkCpstkCommandFactoryTemplate.cxx.in  itkCpstkCommandFactoryTemplate.h.in
IPF/: CMakeLists.txt  itkCommandObjectBase.h  itkCommandObjectFactory.cxx
SymmetricElasticLogDemons/: CMakeLists.txt  LogDomainDemonsRegistration.cxx  itkDiscreteElasticVectorSmoothingFilter.txx  itkDisplacementFieldToWarpedGridFilter.txx  itkElasticVectorSmoothingFilter.txx  itkLogDomainDeformableRegistrationFilter.h
Utils/SliceToVolumeRegistration/: CMakeLists.txt  itkSliceToSliceRegistration.cxx  itkSliceToVolumeMutualInformationCostFunction.h  itkSliceToVolumeMutualInformationCostFunction.txx  itkSliceToVolumePlaneConstrainedMutualInformationCostFunction.h  itkSliceToVolumePlaneConstrainedMutualInformationCostFunction.txx  itkSliceToVolumeRegistration.cxx  itkVolumeToVolumeRegistration.cxx
Utils/SymmetricElasticLogDemons/: CMakeLists.txt  ElasticLogDomainDemonsRegistration.cxx  itkDiscreteElasticVectorSmoothingFilter.h  itkDiscreteElasticVectorSmoothingFilter.txx  itkDisplacementFieldToWarpedGridFilter.h  itkElasticVectorSmoothingFilter.h  itkExponentialDeformationFieldImageFilter2.h  itkExponentialDeformationFieldImageFilter2.txx  itkLogDomainDeformableRegistrationFilter.h  itkLogDomainDeformableRegistrationFilter.txx  itkLogDomainDemonsRegistrationFilter.h  itkLogDomainDemonsRegistrationFilter.txx  itkMultiResolutionLogDomainDeformableRegistration.h  itkMultiResolutionLogDomainDeformableRegistration.txx  itkSymmetricLogDomainDemonsRegistrationFilter.h  itkSymmetricLogDomainDemonsRegistrationFilter.txx  itkVelocityFieldBCHCompositionFilter.h
gdcmimport/: CMakeLists.txt  itkGDCMImporter.h
medview/: CMakeLists.txt  medview.cxx
prolatespheroidaltools/: CMakeLists.txt  CMakeLists.txt~  EllipsoidalGenerator.cxx  OblateGenerator.cxx  ProlateGenerator.cxx  itkDoubleLandmarkSetToDomainImageFilter.cxx  itkDoubleLandmarkSetToDomainImageFilter.h  itkEllipsoidalTransformToDomainImageFilter.cxx  itkEllipsoidalTransformToDomainImageFilter.h  itkOblateSpheroidalTransformToDomainImageFilter.cxx  itkOblateSpheroidalTransformToDomainImageFilter.h  itkProlateSpheroidalTransformToDomainImageFilter.cxx  itkProlateSpheroidalTransformToDomainImageFilter.h  vtkEllipsoidalTransformController.cxx  vtkEllipsoidalTransformController.h  vtkOblateSpheroidalTransformController.cxx  vtkOblateSpheroidalTransformController.h  vtkProlateSpheroidalTransformController.cxx  vtkProlateSpheroidalTransformController.h
segmentation/: CMakeLists.txt  GetPot.h  SegmentationTool.cxx
segmentation/LandmarkVariationalSegmentation/: CMakeLists.txt  itkVariationalFunctionImageToImageFilter.h  itkVariationalFunctionImageToImageFilter.txx  vtkLandmarkSegmentationController.cxx  vtkLandmarkSegmentationController.h  vtkLandmarkWidget.cxx  vtkLandmarkWidget.h
vtkDataManagement/: CMakeLists.txt  vtkDataManager.cxx  vtkDataManager.h  vtkMetaDataSet.cxx  vtkMetaDataSet.h  vtkMetaDataSetSequence.cxx  vtkMetaDataSetSequence.h  vtkMetaImageData.cxx  vtkMetaImageData.h  vtkMetaSurfaceMesh.cxx  vtkMetaSurfaceMesh.h  vtkMetaVolumeMesh.cxx  vtkMetaVolumeMesh.h
vtkImageView/: CMakeLists.txt  vtkAxes2DWidget.cxx  vtkAxes2DWidget.h  vtkDataSet2DWidget.cxx  vtkDataSet2DWidget.h  vtkImageView.cxx  vtkImageView.h  vtkImageView2D.cxx  vtkImageView2D.h  vtkImageView2DCommand.cxx  vtkImageView2DCommand.h  vtkImageView3D.cxx  vtkImageView3D.h  vtkImageView3DCroppingBoxCallback.cxx  vtkImageView3DCroppingBoxCallback.h  vtkImageViewCollection.cxx  vtkImageViewCollection.h  vtkImageViewCornerAnnotation.cxx  vtkImageViewCornerAnnotation.h  vtkInteractorStyleImageView2D.cxx  vtkInteractorStyleImageView2D.h  vtkOrientationAnnotation.cxx  vtkOrientationAnnotation.h  vtkOrientedBoxWidget.cxx  vtkOrientedBoxWidget.h
(+435 files in other folders)
